<resources>
    <string name="app_name">InventoryApp</string>

    <!-- Label for overflow menu option that inserts fake data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title text for the empty view, which describes the empty image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit empty in here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when current pet was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_links">Links</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_supplier">Supplier Email</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_picture">Picture Link</string>

    <!-- Text for increase button in the editor [CHAR LIMIT=30] -->
    <string name="button_quantity_increase">+1</string>

    <!-- Text for decrease button in the editor [CHAR LIMIT=30] -->
    <string name="button_quantity_decrease">-1</string>

    <!-- Text for decrease button in the editor [CHAR LIMIT=30] -->
    <string name="button_order">Order more</string>

    <!-- Toast text for decreasing quantity [CHAR LIMIT=NONE] -->
    <string name="decrease_toast">Quantity must be 0 or more.</string>

    <!-- Toast text for when an item quantity reaches 0 [CHAR LIMIT=20] -->
    <string name="no_quantity">No stock left!</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_all_confirm">Delete all inventory items?</string>

    <!-- Toast text for error validating item fields [CHAR LIMIT=NONE] -->
    <string name="save_validation">Please make sure your item has a name, price, quantity, supplier URL, and picture URL.</string>

    <string name="item_picture">Add Item Picture</string>

    <!-- Email intent subject [CHAR LIMIT=NONE] -->
    <string name="order_to">Order for <xliff.g id="supplier_name" example="Home Depot">%s</xliff.g></string>

    <!-- Email intent message [CHAR LIMIT=NONE] -->
    <string name="order_summary">Hello\nI would like to order more <xliff.g id="inventory_item_name" example="Ladder">%s</xliff.g> please!\nThank you!</string>



</resources>
