<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_image"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginBottom="@dimen/small"
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image" />

            <Button
                android:id="@+id/add_item_picture_button"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginBottom="@dimen/small"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:text="@string/item_picture"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

    </LinearLayout>
    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                android:hint="@string/hint_item_price"
                android:inputType= "numberDecimal"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_item_quantity"
                android:hint="@string/hint_item_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <!-- Quantity Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Decrease button -->
                <Button
                    android:id="@+id/button_decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_quantity_decrease"/>

                <!-- Decrease button -->

                <Button
                    android:id="@+id/button_increase_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_quantity_increase"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Links category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_item_supplier"
                android:hint="@string/hint_item_supplier"
                android:inputType="textUri"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Order Button -->
        <Button
            android:id="@+id/button_order_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/button_order"/>
    </RelativeLayout>

</LinearLayout>
